# edm2-v2

./: .gitignore  CHANGELOG.md  README.md  calculate_metrics.py  compare_samplers.py  count_flops.py  dataset_tool.py  download_models.py  generate_images.py  pyproject.toml  reconstruct_phema.py  requirements.txt  sample_images.py  todo.md  toy_example.py  train_edm2.py  train_hydra.py
.claude/skills/run-edm2/: SKILL.md  smoke.sh
.github/workflows/: ci.yml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
configs/: config.yaml
dnnlib/: __init__.py  util.py
sbatch/: compare_samplers_256x256.sbatch  generate_1gpu_1024x1024.sbatch  generate_1gpu_256x256.sbatch  generate_1gpu_512x512.sbatch  sample_4gpu_1024x1024.sbatch  sample_4gpu_256x256.sbatch  sample_4gpu_512x512.sbatch  train_2h200_1024x1024.sbatch  train_2h200_256x256.sbatch  train_2h200_512x512.sbatch
sh/: generate_1024.sh  generate_256.sh  generate_512.sh  train_1024.sh  train_256.sh  train_512.sh
tests/: test_conformance.py  test_smoke.py
torch_utils/: distributed.py  misc.py  persistence.py  training_stats.py
training/: checkpoint.py  dataset.py  encoders.py  h5_writer.py  logger.py  metrics.py  networks_edm2.py  phema.py  samplers.py  training_loop.py
