[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edm2"
version = "2.0.0"
description = "EDM2: Analyzing and Improving the Training Dynamics of Diffusion Models (v2 refresh: DiffiT-style logging, combra metrics, multi-sampler)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY-NC-SA 4.0" }
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.26.3",
    "accelerate>=0.27.2",
    "click>=8.0",
    "numpy>=1.24.0",
    "Pillow>=9.0",
    "scipy>=1.10.0",
    "tensorboard>=2.14.0",
    "psutil>=5.9.0",
    "tqdm>=4.64.1",
    "requests>=2.28.0",
    "pyspng>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
# Optional: enables combra.metrics during training-time eval and the
# sampler-vs-steps comparison. Training runs unchanged without it (the import is
# guarded). combra's base deps cover every image metric -- FID (pytorch-fid),
# CLIP-MMD (open-clip-torch) and FD-DINOv2 (torch.hub DINOv2).
# combra is a private repo -- cloning requires GitHub auth. If you are logged in
# via the GitHub CLI (`gh auth login`, HTTPS protocol), git inherits gh's
# credential helper and the clone works automatically:
#     pip install -e '.[combra]'
combra = [
    "combra @ git+https://github.com/dkagramanyan/combra.git",
]

# Console entry-points. After `pip install -e .` these are available on PATH.
# (For distributed sampling use `torchrun ... sample_images.py` instead, since
# torchrun launches the script itself.)
[project.scripts]
edm2-train = "train_edm2:main"
edm2-gen-images = "generate_images:cmdline"
edm2-sample = "sample_images:cmdline"
edm2-eval = "calculate_metrics:cmdline"
edm2-prepare-data = "dataset_tool:cmdline"
edm2-download-models = "download_models:main"
edm2-compare-samplers = "compare_samplers:main"

[tool.setuptools]
py-modules = [
    "train_edm2",
    "generate_images",
    "sample_images",
    "calculate_metrics",
    "dataset_tool",
    "download_models",
    "compare_samplers",
    "count_flops",
    "reconstruct_phema",
    "toy_example",
]

[tool.setuptools.packages.find]
include = ["dnnlib*", "torch_utils*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Pragmatic set for a research codebase: pyflakes (F) and import sorting (I).
select = ["F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
